// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Run Management Integration > Scenario 1: Three Encounter Victory Run > should complete encounter 0, unlock skill, and transition to awaiting-skill-selection 1`] = `
{
  "battleLog": [
    {
      "actorId": "player-1",
      "message": "Hero used Strike",
      "skillName": "Strike",
      "tick": 3,
      "type": "action-resolved",
    },
    {
      "actorId": "player-1",
      "message": "Goblin takes 15 damage",
      "targetId": "enemy-0-1",
      "tick": 3,
      "type": "damage",
      "value": 15,
    },
    {
      "actorId": "enemy-0-1",
      "message": "Goblin used Strike",
      "skillName": "Strike",
      "tick": 3,
      "type": "action-resolved",
    },
    {
      "actorId": "enemy-0-1",
      "message": "Hero takes 15 damage",
      "targetId": "player-1",
      "tick": 3,
      "type": "damage",
      "value": 15,
    },
    {
      "message": "Goblin was knocked out",
      "targetId": "enemy-0-1",
      "tick": 3,
      "type": "knockout",
    },
    {
      "message": "Victory!",
      "tick": 3,
      "type": "victory",
    },
  ],
  "runState": {
    "currentEncounterIndex": 0,
    "encounters": [
      {
        "encounterId": "enc-0",
        "enemies": [
          {
            "currentAction": null,
            "currentHp": 15,
            "id": "enemy-0-1",
            "isPlayer": false,
            "maxHp": 15,
            "name": "Goblin",
            "skills": [
              {
                "baseDuration": 2,
                "effects": [
                  {
                    "type": "damage",
                    "value": 15,
                  },
                ],
                "id": "strike",
                "name": "Strike",
                "targeting": "single-enemy-lowest-hp",
              },
            ],
            "statusEffects": [],
          },
        ],
        "name": "Encounter 0",
        "skillRewards": [
          "heal",
        ],
      },
      {
        "encounterId": "enc-1",
        "enemies": [],
        "name": "Encounter 1",
        "skillRewards": [
          "shield",
        ],
      },
      {
        "encounterId": "enc-2",
        "enemies": [],
        "name": "Encounter 2",
        "skillRewards": [],
      },
    ],
    "encountersCleared": 1,
    "playerParty": [
      {
        "currentAction": null,
        "currentHp": 100,
        "id": "player-1",
        "isPlayer": true,
        "maxHp": 100,
        "name": "Hero",
        "skills": [],
        "statusEffects": [],
      },
    ],
    "runId": "run-1",
    "runStatus": "awaiting-skill-selection",
    "skillPool": [
      "strike",
      "heal",
    ],
    "skillsUnlockedThisRun": [
      "heal",
    ],
  },
}
`;

exports[`Run Management Integration > Scenario 1: Three Encounter Victory Run > should complete final encounter 2 and verify runStatus = victory 1`] = `
{
  "battleLog": [
    {
      "actorId": "player-1",
      "message": "Hero used Strike",
      "skillName": "Strike",
      "tick": 3,
      "type": "action-resolved",
    },
    {
      "actorId": "player-1",
      "message": "Troll takes 15 damage",
      "targetId": "enemy-2-1",
      "tick": 3,
      "type": "damage",
      "value": 15,
    },
    {
      "actorId": "enemy-2-1",
      "message": "Troll used Strike",
      "skillName": "Strike",
      "tick": 3,
      "type": "action-resolved",
    },
    {
      "actorId": "enemy-2-1",
      "message": "Hero takes 15 damage",
      "targetId": "player-1",
      "tick": 3,
      "type": "damage",
      "value": 15,
    },
    {
      "message": "Troll was knocked out",
      "targetId": "enemy-2-1",
      "tick": 3,
      "type": "knockout",
    },
    {
      "message": "Victory!",
      "tick": 3,
      "type": "victory",
    },
  ],
  "runState": {
    "currentEncounterIndex": 2,
    "encounters": [
      {
        "encounterId": "enc-0",
        "enemies": [],
        "name": "Encounter 0",
        "skillRewards": [],
      },
      {
        "encounterId": "enc-1",
        "enemies": [],
        "name": "Encounter 1",
        "skillRewards": [],
      },
      {
        "encounterId": "enc-2",
        "enemies": [
          {
            "currentAction": null,
            "currentHp": 15,
            "id": "enemy-2-1",
            "isPlayer": false,
            "maxHp": 15,
            "name": "Troll",
            "skills": [
              {
                "baseDuration": 2,
                "effects": [
                  {
                    "type": "damage",
                    "value": 15,
                  },
                ],
                "id": "strike",
                "name": "Strike",
                "targeting": "single-enemy-lowest-hp",
              },
            ],
            "statusEffects": [],
          },
        ],
        "name": "Encounter 2",
        "skillRewards": [],
      },
    ],
    "encountersCleared": 3,
    "playerParty": [
      {
        "currentAction": null,
        "currentHp": 100,
        "id": "player-1",
        "isPlayer": true,
        "maxHp": 100,
        "name": "Hero",
        "skills": [],
        "statusEffects": [],
      },
    ],
    "runId": "run-1",
    "runStatus": "victory",
    "skillPool": [
      "strike",
    ],
    "skillsUnlockedThisRun": [],
  },
}
`;

exports[`Run Management Integration > Scenario 1: Three Encounter Victory Run > should initialize run with 3 encounters correctly 1`] = `
{
  "currentEncounterIndex": 0,
  "encounters": [
    {
      "encounterId": "enc-0",
      "enemies": [
        {
          "currentAction": null,
          "currentHp": 15,
          "id": "enemy-0-1",
          "isPlayer": false,
          "maxHp": 15,
          "name": "Goblin",
          "skills": [
            {
              "baseDuration": 2,
              "effects": [
                {
                  "type": "damage",
                  "value": 15,
                },
              ],
              "id": "strike",
              "name": "Strike",
              "targeting": "single-enemy-lowest-hp",
            },
          ],
          "statusEffects": [],
        },
      ],
      "name": "Encounter 0",
      "skillRewards": [
        "heal",
      ],
    },
    {
      "encounterId": "enc-1",
      "enemies": [
        {
          "currentAction": null,
          "currentHp": 15,
          "id": "enemy-1-1",
          "isPlayer": false,
          "maxHp": 15,
          "name": "Orc",
          "skills": [
            {
              "baseDuration": 2,
              "effects": [
                {
                  "type": "damage",
                  "value": 15,
                },
              ],
              "id": "strike",
              "name": "Strike",
              "targeting": "single-enemy-lowest-hp",
            },
          ],
          "statusEffects": [],
        },
      ],
      "name": "Encounter 1",
      "skillRewards": [
        "shield",
      ],
    },
    {
      "encounterId": "enc-2",
      "enemies": [
        {
          "currentAction": null,
          "currentHp": 15,
          "id": "enemy-2-1",
          "isPlayer": false,
          "maxHp": 15,
          "name": "Troll",
          "skills": [
            {
              "baseDuration": 2,
              "effects": [
                {
                  "type": "damage",
                  "value": 15,
                },
              ],
              "id": "strike",
              "name": "Strike",
              "targeting": "single-enemy-lowest-hp",
            },
          ],
          "statusEffects": [],
        },
      ],
      "name": "Encounter 2",
      "skillRewards": [],
    },
  ],
  "encountersCleared": 0,
  "playerParty": [
    {
      "currentAction": null,
      "currentHp": 100,
      "id": "player-1",
      "isPlayer": true,
      "maxHp": 100,
      "name": "Hero",
      "skills": [],
      "statusEffects": [],
    },
  ],
  "runId": "run-1",
  "runStatus": "in-progress",
  "skillPool": [
    "strike",
  ],
  "skillsUnlockedThisRun": [],
}
`;

exports[`Run Management Integration > Scenario 1: Three Encounter Victory Run > should progress to encounter 1, complete it, and verify encountersCleared increments 1`] = `
{
  "battleLog": [
    {
      "actorId": "player-1",
      "message": "Hero used Strike",
      "skillName": "Strike",
      "tick": 3,
      "type": "action-resolved",
    },
    {
      "actorId": "player-1",
      "message": "Orc takes 15 damage",
      "targetId": "enemy-1-1",
      "tick": 3,
      "type": "damage",
      "value": 15,
    },
    {
      "actorId": "player-1",
      "message": "Hero used Strike",
      "skillName": "Strike",
      "tick": 3,
      "type": "action-resolved",
    },
    {
      "actorId": "player-1",
      "message": "Orc takes 15 damage",
      "targetId": "enemy-1-1",
      "tick": 3,
      "type": "damage",
      "value": 15,
    },
    {
      "actorId": "enemy-1-1",
      "message": "Orc used Strike",
      "skillName": "Strike",
      "tick": 3,
      "type": "action-resolved",
    },
    {
      "actorId": "enemy-1-1",
      "message": "Hero takes 15 damage",
      "targetId": "player-1",
      "tick": 3,
      "type": "damage",
      "value": 15,
    },
    {
      "message": "Orc was knocked out",
      "targetId": "enemy-1-1",
      "tick": 3,
      "type": "knockout",
    },
    {
      "message": "Victory!",
      "tick": 3,
      "type": "victory",
    },
  ],
  "runState": {
    "currentEncounterIndex": 1,
    "encounters": [
      {
        "encounterId": "enc-0",
        "enemies": [],
        "name": "Encounter 0",
        "skillRewards": [
          "heal",
        ],
      },
      {
        "encounterId": "enc-1",
        "enemies": [
          {
            "currentAction": null,
            "currentHp": 15,
            "id": "enemy-1-1",
            "isPlayer": false,
            "maxHp": 15,
            "name": "Orc",
            "skills": [
              {
                "baseDuration": 2,
                "effects": [
                  {
                    "type": "damage",
                    "value": 15,
                  },
                ],
                "id": "strike",
                "name": "Strike",
                "targeting": "single-enemy-lowest-hp",
              },
            ],
            "statusEffects": [],
          },
        ],
        "name": "Encounter 1",
        "skillRewards": [
          "shield",
        ],
      },
      {
        "encounterId": "enc-2",
        "enemies": [],
        "name": "Encounter 2",
        "skillRewards": [],
      },
    ],
    "encountersCleared": 2,
    "playerParty": [
      {
        "currentAction": null,
        "currentHp": 100,
        "id": "player-1",
        "isPlayer": true,
        "maxHp": 100,
        "name": "Hero",
        "skills": [
          {
            "baseDuration": 2,
            "effects": [
              {
                "type": "damage",
                "value": 15,
              },
            ],
            "id": "strike",
            "name": "Strike",
            "targeting": "single-enemy-lowest-hp",
          },
          {
            "baseDuration": 3,
            "effects": [
              {
                "type": "heal",
                "value": 30,
              },
            ],
            "id": "heal",
            "name": "Heal",
            "targeting": "ally-lowest-hp-damaged",
          },
        ],
        "statusEffects": [],
        "unlockedSkillPool": [
          {
            "baseDuration": 2,
            "effects": [
              {
                "type": "damage",
                "value": 15,
              },
            ],
            "id": "strike",
            "name": "Strike",
            "targeting": "single-enemy-lowest-hp",
          },
          {
            "baseDuration": 3,
            "effects": [
              {
                "type": "heal",
                "value": 30,
              },
            ],
            "id": "heal",
            "name": "Heal",
            "targeting": "ally-lowest-hp-damaged",
          },
        ],
      },
    ],
    "runId": "run-1",
    "runStatus": "awaiting-skill-selection",
    "skillPool": [
      "strike",
    ],
    "skillsUnlockedThisRun": [
      "heal",
    ],
  },
}
`;

exports[`Run Management Integration > Scenario 2: Early Defeat Run > should handle defeat in encounter 0 and verify runStatus = defeat 1`] = `
{
  "battleLog": [
    {
      "actorId": "enemy-0-1",
      "message": "Strong Goblin used Strike",
      "skillName": "Strike",
      "tick": 3,
      "type": "action-resolved",
    },
    {
      "actorId": "enemy-0-1",
      "message": "Hero takes 15 damage",
      "targetId": "player-1",
      "tick": 3,
      "type": "damage",
      "value": 15,
    },
    {
      "actorId": "enemy-0-1",
      "message": "Strong Goblin used Strike",
      "skillName": "Strike",
      "tick": 3,
      "type": "action-resolved",
    },
    {
      "actorId": "enemy-0-1",
      "message": "Hero takes 15 damage",
      "targetId": "player-1",
      "tick": 3,
      "type": "damage",
      "value": 15,
    },
    {
      "message": "Hero was knocked out",
      "targetId": "player-1",
      "tick": 3,
      "type": "knockout",
    },
    {
      "message": "Defeat!",
      "tick": 3,
      "type": "defeat",
    },
  ],
  "runState": {
    "currentEncounterIndex": 0,
    "encounters": [
      {
        "encounterId": "enc-0",
        "enemies": [
          {
            "currentAction": null,
            "currentHp": 100,
            "id": "enemy-0-1",
            "isPlayer": false,
            "maxHp": 100,
            "name": "Strong Goblin",
            "skills": [
              {
                "baseDuration": 2,
                "effects": [
                  {
                    "type": "damage",
                    "value": 15,
                  },
                ],
                "id": "strike",
                "name": "Strike",
                "targeting": "single-enemy-lowest-hp",
              },
            ],
            "statusEffects": [],
          },
        ],
        "name": "Encounter 0",
        "skillRewards": [
          "heal",
        ],
      },
      {
        "encounterId": "enc-1",
        "enemies": [],
        "name": "Encounter 1",
        "skillRewards": [],
      },
      {
        "encounterId": "enc-2",
        "enemies": [],
        "name": "Encounter 2",
        "skillRewards": [],
      },
    ],
    "encountersCleared": 0,
    "playerParty": [
      {
        "currentAction": null,
        "currentHp": 10,
        "id": "player-1",
        "isPlayer": true,
        "maxHp": 100,
        "name": "Hero",
        "skills": [],
        "statusEffects": [],
      },
    ],
    "runId": "run-1",
    "runStatus": "defeat",
    "skillPool": [],
    "skillsUnlockedThisRun": [],
  },
}
`;

exports[`Run Management Integration > Scenario 3: Skill Persistence Across Encounters > should unlock strike skill after encounter 0 and verify persistence 1`] = `
{
  "characterSkills": [
    "heal",
    "strike",
  ],
  "skillsUnlockedThisRun": [
    "strike",
  ],
  "unlockedSkills": [
    "heal",
    "strike",
  ],
}
`;

exports[`Run Management Integration > Scenario 4: Loadout Swap Between Battles > should verify new loadout applies to encounter 1 battle 1`] = `
{
  "activeLoadout": [],
  "battleLog": [
    {
      "actorId": "player-1",
      "message": "Hero used Defend",
      "skillName": "Defend",
      "tick": 3,
      "type": "action-resolved",
    },
    {
      "actorId": "enemy-1-1",
      "message": "Orc used Strike",
      "skillName": "Strike",
      "tick": 3,
      "type": "action-resolved",
    },
    {
      "actorId": "enemy-1-1",
      "message": "Hero takes 15 damage",
      "targetId": "player-1",
      "tick": 3,
      "type": "damage",
      "value": 15,
    },
    {
      "actorId": "player-1",
      "message": "defending applied to Hero",
      "statusType": "defending",
      "targetId": "player-1",
      "tick": 3,
      "type": "status-applied",
    },
    {
      "message": "defending expired on Hero",
      "statusType": "defending",
      "targetId": "player-1",
      "tick": 5,
      "type": "status-expired",
    },
    {
      "actorId": "player-1",
      "message": "Hero used Strike",
      "skillName": "Strike",
      "tick": 6,
      "type": "action-resolved",
    },
    {
      "actorId": "player-1",
      "message": "Orc takes 15 damage",
      "targetId": "enemy-1-1",
      "tick": 6,
      "type": "damage",
      "value": 15,
    },
    {
      "actorId": "enemy-1-1",
      "message": "Orc used Strike",
      "skillName": "Strike",
      "tick": 6,
      "type": "action-resolved",
    },
    {
      "actorId": "enemy-1-1",
      "message": "Hero takes 15 damage",
      "targetId": "player-1",
      "tick": 6,
      "type": "damage",
      "value": 15,
    },
    {
      "message": "Orc was knocked out",
      "targetId": "enemy-1-1",
      "tick": 6,
      "type": "knockout",
    },
    {
      "message": "Victory!",
      "tick": 6,
      "type": "victory",
    },
  ],
}
`;
